@@ -10,6 +10,7 @@
 * Build corrupt session file by hand rather than storing binary file that is
   not universally compatible. Closes bug #293
   (t/175_open_session2.t fails on i686: Long integer size is not compatible)
+* Convert all scans to PNG to allow tesseract to extract resolution
 
 
 2.0.2 (26.03.2018):
